--- a/less/form.less
+++ b/less/form.less
@@ -371,7 +371,7 @@
           }
 
           &>div {
-            height: 420px;
+            height: 460px;
             padding: 30px;
             position: absolute;
             top: 50%;
@@ -398,6 +398,56 @@
             .sk-picture-modal-center {
               .imgCanvas {
                 opacity: 0;
+                position: absolute;
+                top: 100%;
+                left: 0;
+              }
+              .sk-picture-modal-input {
+                height: 24px;
+                text-align: center;
+                font-size: 0;
+                padding-top: 10px;
+
+                input {
+                  height: 24px;
+                  line-height: 24px;
+                  background-color: #F1F3F4;
+                  text-align: center;
+                  vertical-align: top;
+                  padding: 0 30px 0 20px;
+                }
+                input::-webkit-outer-spin-button,
+                input::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                }
+
+                input[type="number"] {
+                    -moz-appearance: textfield;
+                }
+
+                span {
+                  display: inline-block;
+                  font-size: 14px;
+                  line-height: 24px;
+                  padding: 0 10px;
+                }
+
+                &>div {
+                  display: inline-block;
+                  vertical-align: top;
+                  font-size: 12px;
+                  position: relative;
+                  width: 90px;
+
+                  &>div {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    line-height: 24px;
+                    width: 30px;
+                    text-align: center;
+                  }
+                }
               }
               .sk-picture-modal-center-img {
                 width: 400px;
@@ -461,7 +511,7 @@
           .translate(-50%, -50%);
         }
 
-        input {
+        .sk-picture-img-input {
           width: 100%;
           height: 100%;
           position: absolute;
