--- a/styles/index.css
+++ b/styles/index.css
@@ -30,7 +30,7 @@
 }
 .sk-modal-page .sk-modal-body {
   overflow: auto;
-  max-height: 500px;
+  max-height: 550px;
   padding: 0 30px;
 }
 .sk-modal-page .sk-modal-body.sk-modal-body-foot {
@@ -812,7 +812,7 @@
   left: 100%;
 }
 .sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div {
-  height: 420px;
+  height: 460px;
   padding: 30px;
   position: absolute;
   top: 50%;
@@ -861,6 +861,51 @@
 }
 .sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .imgCanvas {
   opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input {
+  height: 24px;
+  text-align: center;
+  font-size: 0;
+  padding-top: 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input input {
+  height: 24px;
+  line-height: 24px;
+  background-color: #F1F3F4;
+  text-align: center;
+  vertical-align: top;
+  padding: 0 30px 0 20px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input input::-webkit-outer-spin-button,
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input input[type="number"] {
+  -moz-appearance: textfield;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input span {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 24px;
+  padding: 0 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input > div {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 12px;
+  position: relative;
+  width: 90px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-input > div > div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  line-height: 24px;
+  width: 30px;
+  text-align: center;
 }
 .sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-center .sk-picture-modal-center-img {
   width: 400px;
@@ -934,7 +979,7 @@
   -webkit-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
 }
-.sk-form .sk-form-items .sk-form-row .sk-picture input {
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-img-input {
   width: 100%;
   height: 100%;
   position: absolute;
